--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -14,13 +14,15 @@
     <div class="config-container">
         <h2 class="config-title">Quiz Configuration</h2>
         <h4 class="option-title">Select Category</h4>
-        <div class="category-options">
-            <button class="question-option">Programming</button>
-            <button class="question-option">Geography</button>
-            <button class="question-option">Mathematics</button>
-            <button class="question-option">Entertainment</button>
+       
+        <div class="config-options">
+            <div class="category-options">
+                <button class="question-option">Programming</button>
+                <button class="question-option">Geography</button>
+                <button class="question-option">Mathematics</button>
+                <button class="question-option">Entertainment</button>
+            </div>
         </div>
-
 
         <div class="config-options">
             <h4 class="option-title"> No. of Quesitons</h4>
