--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -5,19 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <!--linking google fonts for icon-->
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Quiz App</title>
 </head>
 
 <body>
 
-
     <div class="config-container">
         <h2 class="config-title">Quiz Configuration</h2>
         <h4 class="option-title">Select Category</h4>
-       
+
         <div class="config-options">
             <div class="category-options">
-                <button class="question-option">Programming</button>
+                <button class="question-option active">Programming</button>
                 <button class="question-option">Geography</button>
                 <button class="question-option">Mathematics</button>
                 <button class="question-option">Entertainment</button>
@@ -27,7 +29,7 @@
         <div class="config-options">
             <h4 class="option-title"> No. of Quesitons</h4>
             <div class="question-options">
-                <button class="question-option">5</button>
+                <button class="question-option active">5</button>
                 <button class="question-option">10</button>
                 <button class="question-option">15</button>
                 <button class="question-option">20</button>
@@ -38,6 +40,45 @@
         <button class="start-quz-btn">Start Quiz</button>
     </div>
 
+    <div class="quiz-container">
+        <header class="quiz-header">
+            <h2 class="quiz-title">Quiz Application</h2>
+            <div class="quiz-timer">
+                <span class="material-symbols-outlined">timer</span>
+                <p class="time-duration">15s</p>
+            </div>
+        </header>
+
+        <div class="quiz-content">
+            <h1 class="question-text">In Javasript, how do you create a function?</h1>
+            <ul class="answer-options">
+                <li class="answer-option">
+                    <p>create function myFunction()</p>
+                </li>
+                <li class="answer-option">
+                    <p>function myFunction()</p>
+                </li>
+                <li class="answer-option">
+                    <p>def function myFunction()</p>
+                </li>
+                <li class="answer-option">
+                    <p>func myFunction()</p>
+                </li>
+            </ul>
+        </div>
+
+        <div class="quiz-footer">
+            <p class="question-status"><b>2</b> of <b>10</b> Questions
+            <p>
+                <button class="next-question-btn">
+                    Next
+                    <span class="material-symbols-rounded">right_arrow_alt</span>
+                </button>
+        </div>
+
+
+
+    </div>
 
 
 
