--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -57,9 +57,11 @@
                 </li>
                 <li class="answer-option">
                     <p>function myFunction()</p>
+                    <span class="material-symbols-outlined">check_circle</span>
                 </li>
                 <li class="answer-option">
                     <p>def function myFunction()</p>
+                    <span class="material-symbols-outlined">cancel</span>
                 </li>
                 <li class="answer-option">
                     <p>func myFunction()</p>
@@ -72,7 +74,7 @@
             <p>
                 <button class="next-question-btn">
                     Next
-                    <span class="material-symbols-rounded">right_arrow_alt</span>
+                    <span class="material-symbols-outlined">arrow_right_alt</span>
                 </button>
         </div>
 
