--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -50,23 +50,8 @@
         </header>
 
         <div class="quiz-content">
-            <h1 class="question-text">In Javasript, how do you create a function?</h1>
-            <ul class="answer-options">
-                <li class="answer-option">
-                    <p>create function myFunction()</p>
-                </li>
-                <li class="answer-option correct">
-                    <p>function myFunction()</p>
-                    <span class="material-symbols-outlined">check_circle</span>
-                </li>
-                <li class="answer-option incorrect">
-                    <p>def function myFunction()</p>
-                    <span class="material-symbols-outlined">cancel</span>
-                </li>
-                <li class="answer-option">
-                    <p>func myFunction()</p>
-                </li>
-            </ul>
+            <h1 class="question-text"></h1>
+            <ul class="answer-options"></ul>
         </div>
 
         <div class="quiz-footer">
@@ -87,8 +72,8 @@
         <button class="try-again-btn">Try Again</button>
     </div>
 
-    <script src="javascript/script.js"></script>
     <script src="javascript/questions.js"></script>
+    <script src="javascript/script.js"></script>
 </body>
 
 </html>
