--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -55,12 +55,11 @@
         </div>
 
         <div class="quiz-footer">
-            <p class="question-status"><b>2</b> of <b>10</b> Questions
-            <p>
-                <button class="next-question-btn">
-                    Next
-                    <span class="material-symbols-outlined">arrow_right_alt</span>
-                </button>
+            <p class="question-status"></p>
+            <button class="next-question-btn">
+                Next
+                <span class="material-symbols-outlined">arrow_right_alt</span>
+            </button>
         </div>
 
     </div>
