--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -67,7 +67,7 @@
     <div class="result-container">
         <img src="./quiz-over.png" alt="yaaay!" class="result-img">
         <h2 class="result-title">Quiz Completed!</h2>
-        <p class="result-message">You answered <b>3</b> out if <b>5</b> questions correctly. Great Effort! </p>
+        <p class="result-message"></p>
         <button class="try-again-btn">Try Again</button>
     </div>
 
