--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -37,7 +37,7 @@
             </div>
         </div>
 
-        <button class="start-quz-btn">Start Quiz</button>
+        <button class="start-quiz-btn">Start Quiz</button>
     </div>
     <!-- Quiz Container -->
     <div class="quiz-container">
