fixed-CSS-Selectors

--- a/QuizApp/index.html
+++ b/QuizApp/index.html
@@ -19,10 +19,10 @@
 
         <div class="config-options">
             <div class="category-options">
-                <button class="question-option active">Programming</button>
-                <button class="question-option">Geography</button>
-                <button class="question-option">Mathematics</button>
-                <button class="question-option">Entertainment</button>
+                <button class=" category-option active">Programming</button>
+                <button class="category-option">Geography</button>
+                <button class="category-option">Mathematics</button>
+                <button class="category-option">Entertainment</button>
             </div>
         </div>
 
@@ -72,7 +72,7 @@
     </div>
 
     <script src="javascript/questions.js"></script>
-    <script src="javascript/script.js"></script>
+    <script src="javascript/script.js" defer></script>
 </body>
 
 </html>
